[fix] bottom overflowing

--- a/app/src/app/app.component.scss
+++ b/app/src/app/app.component.scss
@@ -10,9 +10,9 @@ mat-sidenav {
 }
 
 mat-sidenav-container {
-    height: calc(100vh - 64px);
+    height: calc(100vh - 64px - 64px);
 }
 
 @media screen and (max-width: 599px) {
-    height: calc(100vh - 56px);
+    height: calc(100vh - 56px - 56px);
 }
